--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = iterable_serialization
+name = pronunciation-dict-creation
 version = 1.0.0
 author="Stefan Taubert"
 author_email="stefan.taubert@posteo.de"
