--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = pronunciation-dict-creation
+name = dict-from-dict
 version = 1.0.0
 author="Stefan Taubert"
 author_email="stefan.taubert@posteo.de"
-description=""
+description="Create pronunciation dictionary from a pronunciation dictionary."
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/stefantaubert/pronunciation-dict-creation.git
